# ┌──────────────────────────────────────────────────────────────────┐
# │  Projects                                                        │
# └──────────────────────────────────────────────────────────────────┘
add_executable(1-opening-a-window 1-opening-a-window/OpeningAWindow.cpp)
target_link_libraries(1-opening-a-window ${ENGINE_NAME})
